Fix scrolling/overflow issues on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ html {
   }
 
 @media (max-width: 899px) {
-    * { max-width: 100vw !important; overflow-x: hidden !important; }
+    * { max-width: 100vw !important; }
 }
 
 .burger-menu {
